[package]
name = "tofas"
version = "0.1.0"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license-file = "LICENSE.txt"
readme = "README.md"
description = "Translation of fundamental astronomical subroutines"
repository = "https://github.com/berke/tofas"

[dependencies]
num = { version = "0.4.0" }
custom_error = { version = "1.9.2" }

[dev-dependencies]
fastrand = { version = "1.7.0" }