[package]
name = "tofas"
version = "0.2.0"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license-file = "LICENSE.txt"
readme = "README.md"
description = "Translation of fundamental astronomical subroutines"
repository = "https://github.com/berke/tofas"

[dependencies]
custom_error = { version = "1.9.2" }

[dev-dependencies]
fastrand = { version = "1.7.0" }