[workspace]
resolver = "2"
members = ["crates/tofas","crates/tofas_extras"]

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license-file = "LICENSE.txt"
readme = "README.md"
description = "Translation of fundamental astronomical subroutines"
repository = "https://github.com/berke/tofas"

[workspace.dependencies]
custom_error = { version = "1.9.2" }
tofas = { version = "0.2.6", path = "crates/tofas" }