[package]
name = "tofas_extras"
edition = "2021"
version.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
custom_error = { workspace = true }
tofas = { workspace = true }
anyhow = { version = "1" }
pico-args = { version = "0.5" }